<resources>
    <string name="app_name">Nearby Kit Demo</string>
    <string name="owner">HUAWEI Developer</string>
    <string name="copyright_info">Copyright 2020. Huawei Technologies Co., Ltd</string>
    <string name="message_engine_example_header">Message Engine Example</string>
    <string name="huawei_logo_content_description">Huawei Logo</string>
    <string name="confirm">OK</string>
    <string name="warn">Warn</string>
    <string name="searching_dialog_header">Searching…</string>
    <string name="subscribe_item_text">Discover Messages</string>
    <string name="publish_message_item_text">Publish Message</string>
    <string name="publish_new_message_dialog_title">Publish New Message</string>
    <string name="message_title_placeholder">Message Title</string>
    <string name="message_content_placeholder">Message Content</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="unpublish_last_message_checkbox_text">Unpublish Last Message</string>
    <string name="start_broadcasting_item_text_start">Start Broadcasting</string>
    <string name="start_broadcasting_item_text_stop">Stop Broadcasting</string>
    <string name="start_discovery_item_text">Start Discovery</string>
    <string name="disconnect_item_text">Disconnect</string>
    <string name="send_file_item_text">Send File</string>
    <string name="search_dialog_title">Searching...</string>
    <string name="nearby_connection_example">Nearby Connection Example</string>
    <string name="transferring">Transferring...</string>
    <string name="transfer_progress_text">%d of %d bytes received</string>
    <string name="transfer_details_text">Transferred %d of %d bytes</string>
    <string name="start_send_bytes_item_text">Start Sending Bytes</string>
    <string name="stop_send_bytes_item_text">Stop Sending Bytes</string>
    <string name="move_the_seekbar_knob_to_send_its_position">Move the SeekBar knob to send its position</string>
    <string name="downloading_file">Downloading file...</string>
    <string name="mesaage_engine_item">Message Engine</string>
    <string name="nearby_connection_item">Nearby Connection</string>
    <string name="bt_unavailable_message">Bluetooth is unavailable. Turn on Bluetooth and run this app again.</string>
    <string name="location_unavailable_message">Location is unavailable. Turn on Location and run this app again.</string>
    <string name="internet_unavailable_message">No Internet access. Make sure you have Internet access and run this app again.</string>
    <string name="waiting_for_connection">Waiting for connection</string>
    <string name="someone_requested_connection">\" request connection\"</string>
    <string name="confirm_pin_code">\"Please confirm the match code is: \"</string>
    <string name="connection_accept">Accept</string>
    <string name="connection_reject">Reject</string>
    <string name="transfer_complete">File transfer complete, check external storage</string>
    <string name="transfer_failed">Move file failed</string>
    <string name="transfer_interrupted">Transfer interrupted</string>
    <string name="status_advertising">Advertising</string>
    <string name="advertising_failure">Advertising Failure</string>
    <string name="status_discovering">Discovering</string>
    <string name="status_connecting_to">Connecting to: %s(%s)</string>
    <string name="status_general">Status: %s</string>
    <string name="status_idle">Idle</string>
    <string name="status_connected">Connected to: %s</string>
    <string name="transferring_bytes_string">Transferring %s</string>
    <string name="cancel_button">Cancel</string>
    <string name="empty_title_error_message">Message title cannot be empty</string>
    <string name="message_published_successfully">Message published successfully.</string>
    <string name="connection_failure">Connection Failure</string>
</resources>
