<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/publish_new_message_dialog_title"
        android:textColor="@color/fontColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_title_placeholder"
        android:inputType="text" />

    <EditText
        android:id="@+id/message_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_content_placeholder"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/unpublishOld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unpublish_last_message_checkbox_text" />
</LinearLayout>
